fixed .walk h2 tag top spacing

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -89,7 +89,7 @@
   
         }//media for button
       }
-      @media @mobile{
+      @media @phone{
         display:flex;
         justify-content: center;
         flex-direction: column;
@@ -107,13 +107,13 @@
         border-radius: 10px;
       }
 
-      @media @mobile{ 
+      @media @phone{ 
         width:100%;
-        margin:0px;
+        margin:0px 0px 10px;;
       }
     } //end of .walk-img section
 
-    @media @mobile{
+    @media @phone{
       flex-flow:column-reverse wrap;
       margin:0px;
       padding:10px;
@@ -122,7 +122,7 @@
 
   }//end of .walk section
 
-  @media @mobile{
+  @media @phone{
     .center();
     flex-direction: column;
 
